BUG 2373: Read-only sharing pane cutting off names * Widen them out, make the 'shared with' part shorter
QA: You should see more of the user's name/email now

--- a/app/styles/grid-sidebar-custom.sass
+++ b/app/styles/grid-sidebar-custom.sass
@@ -511,8 +511,14 @@
           .ie8 &
             margin-top: -1.5em
 
-        .type
+        select.type
           width: 10em
+        &.noGrant
+          span.type
+            width: 8em
+            float: right
+          .name
+            width: 10em
 
   #gridSidebar_guidedFilter
     label em
